--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
-google-genai==1.56.0
+fastapi==0.115.5
+uvicorn[standard]==0.30.6
 python-dotenv==1.0.1
-fastapi==0.115.6
-uvicorn[standard]==0.32.1
-amadeus==11.0.0
-pydantic
-googlemaps
+pydantic==2.8.2
+amadeus==9.0.0
+google-genai==0.6.0
+motor==3.6.0
