--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,7 @@
 fastapi==0.115.5
-uvicorn[standard]==0.30.6
+uvicorn[standard]>=0.31.1
 python-dotenv==1.0.1
-pydantic==2.8.2
+pydantic>=2.11.0,<3.0.0
 amadeus==9.0.0
 google-genai==0.6.0
 google-generativeai>=0.8.0
@@ -11,6 +11,7 @@ aiofiles==24.1.0
 tenacity==9.0.0
 motor==3.6.0
 pymongo>=4.9,<4.10
+dnspython>=2.0.0
 psutil==5.9.8
 redis==7.1.0
 omise==0.10.0
